BitFields - improved unaligned structure edit behavior