@@ -122,7 +122,7 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 		if (offset >= structLength || offset < 0) {
 			return null;
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			DataTypeComponent dtc = components.get(index);
 			if (dtc.isBitFieldComponent()) {
@@ -173,7 +173,7 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 			idx = ordinal;
 		}
 		else {
-			idx = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+			idx = Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		}
 		if (idx >= 0) {
 			doDelete(idx);
@@ -193,10 +193,25 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 		if (isInternallyAligned()) {
 			return;
 		}
-		int shiftAmount = 0;
-		// Bitfields: do not remove space previously occupied
-		if (!dtc.isBitFieldComponent()) {
-			shiftAmount = dtc.getLength();
+		int shiftAmount = dtc.getLength();
+		if (dtc.isBitFieldComponent()) {
+			// Must handle potential overlap with adjacent components
+			// NOTE: existing bitfields will not overlap by more than one byte
+			int minOffset = dtc.getOffset();
+			int maxOffset = dtc.getEndOffset();
+			if (index > 0) {
+				DataTypeComponentImpl previousDtc = components.get(index - 1);
+				if (previousDtc.getEndOffset() == dtc.getOffset()) {
+					++minOffset;
+				}
+			}
+			if (minOffset <= maxOffset && index < components.size()) {
+				DataTypeComponentImpl nextDtc = components.get(index);
+				if (nextDtc.getOffset() == dtc.getOffset()) {
+					--maxOffset;
+				}
+			}
+			shiftAmount = maxOffset - minOffset + 1;
 		}
 		shiftOffsets(index, -1, -shiftAmount);
 	}
@@ -222,7 +237,8 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 				idx = ordinal;
 			}
 			else {
-				idx = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+				idx = Collections.binarySearch(components, Integer.valueOf(ordinal),
+					ordinalComparator);
 			}
 			if (idx >= 0) {
 				doDelete(idx);
@@ -259,7 +275,7 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 		if (index < 0 || index >= numComponents) {
 			throw new ArrayIndexOutOfBoundsException(index);
 		}
-		int idx = Collections.binarySearch(components, new Integer(index), ordinalComparator);
+		int idx = Collections.binarySearch(components, Integer.valueOf(index), ordinalComparator);
 		if (idx >= 0) {
 			return components.get(idx);
 		}
@@ -308,7 +324,7 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 			structLength = offset;
 		}
 
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 
 		int additionalShift = 0;
 		if (index >= 0) {
@@ -448,7 +464,19 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 			idx = index;
 		}
 		else {
-			idx = Collections.binarySearch(components, new Integer(index), ordinalComparator);
+			// TODO: could improve insertion of bitfield which does not intersect
+			// existing ordinal bitfield at the bit-level
+			idx = Collections.binarySearch(components, Integer.valueOf(index), ordinalComparator);
+			if (idx > 0) {
+				DataTypeComponentImpl existingDtc = components.get(idx);
+				if (existingDtc.isBitFieldComponent()) {
+					// must shift down to eliminate possible overlap with previous component 
+					DataTypeComponentImpl previousDtc = components.get(idx - 1);
+					if (previousDtc.getEndOffset() == existingDtc.getOffset()) {
+						shiftOffsets(idx, 0, 1);
+					}
+				}
+			}
 		}
 		if (idx < 0) {
 			idx = -idx - 1;
@@ -533,8 +561,8 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 
 		Comparator<Object> bitOffsetComparator =
 			bigEndian ? bitOffsetComparatorBE : bitOffsetComparatorLE;
-		int startIndex =
-			Collections.binarySearch(components, new Integer(startBitOffset), bitOffsetComparator);
+		int startIndex = Collections.binarySearch(components, Integer.valueOf(startBitOffset),
+			bitOffsetComparator);
 		if (startIndex < 0) {
 			startIndex = -startIndex - 1;
 		}
@@ -671,7 +699,7 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 		if (offset >= structLength) {
 			return;
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 
 		int offsetDelta = 0;
 		int ordinalDelta = 0;
@@ -850,7 +878,7 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 		if (index < 0 || index >= numComponents) {
 			throw new ArrayIndexOutOfBoundsException(index);
 		}
-		int idx = Collections.binarySearch(components, new Integer(index), ordinalComparator);
+		int idx = Collections.binarySearch(components, Integer.valueOf(index), ordinalComparator);
 		if (idx >= 0) {
 			DataTypeComponent dtc = components.remove(idx);
 			dtc.getDataType().removeParent(this);
@@ -1221,7 +1249,8 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 				}
 			}
 		}
-		int index = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int index =
+			Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (index < 0) {
 			index = -index - 1;
 		}
@@ -1256,7 +1285,7 @@ public class StructureDataType extends CompositeDataTypeImpl implements Structur
 		if (index >= numComponents) {
 			return 0;
 		}
-		int idx = Collections.binarySearch(components, new Integer(index), ordinalComparator);
+		int idx = Collections.binarySearch(components, Integer.valueOf(index), ordinalComparator);
 		DataTypeComponent dtc = null;
 		if (idx < 0) {
 			idx = -idx - 1;
